Restaurant site/restaurantStyles.css
footer {
text-align: center;
font-weight: bold;
font-style: italic;

}



#xyz{
color:black;}

.mainpic{

display: block;
margin: auto;
width: 30%;}

label{
    display: inline-block;
    float: left;
    clear: left;
    width: 400px;
    text-align: right;
}

input {
  display: inline-block;
  float: left;
}

